--- a/style.css
+++ b/style.css
@@ -16,17 +16,16 @@ body, html {
     left: 0;
     top: 0;
     overflow-y: auto;
-    background: #000000; /* Dark tone for the sidebar */
+    background: #000000;
     color: #fff;
     padding: 20px 15px;
     box-sizing: border-box;
     font-family: 'IBM Plex Mono', monospace;
-    
 }
 
 .brand-name {
     font-size: 24px;
-    color: #ffffff; /* Light blue color for the brand name */
+    color: #ffffff;
     margin-bottom: 20px;
     text-align: left;
     margin-left: 20px;
@@ -36,12 +35,10 @@ body, html {
     list-style: none;
     padding: 0;
     margin: 0;
-   
 }
 
 .menu-item {
-    margin-bottom: 10px; /* Space between menu items */
-   
+    margin-bottom: 10px;
 }
 
 .menu-item > a {
@@ -49,23 +46,20 @@ body, html {
     text-decoration: none;
     display: block;
     padding: 10px 20px;
-    /*border-radius: 14px; /* Rounded corners for menu items */
-   /* background: #222; /* Slightly darker background for menu items */
-    transition: background 0.3s, color 0.3s;
+    transition: color 0.3s;
     text-align: left;
 }
 
 .menu-item > a:hover,
 .menu-item > a:focus {
-    /* background: #444; /* Lighter shade for hover */
-    color: #18F3BE; /* Light blue for text on hover */
+    color: #18F3BE;
 }
 
 .submenu {
     display: none;
     list-style-type: none;
     padding: 0;
-    margin-left: 10px; /* Slight indent for submenu */
+    margin-left: 10px;
 }
 
 .menu-item:hover .submenu {
@@ -77,11 +71,10 @@ body, html {
     padding: 5px 15px;
     display: block;
     text-decoration: none;
-    border-radius: 14px;
 }
 
 .submenu li a:hover {
-    background: #555; /* Darker shade for hover on submenu items */
+    background: #555;
 }
 
 .footer {
@@ -93,20 +86,12 @@ body, html {
     color: #ccc;
 }
 
-/* Add this new CSS for images */
-.content-image {
-    max-width: 80%; /* Adjust this percentage as needed */
+.content-image, img {
+    max-width: 100%;
     height: auto;
     display: block;
     margin: 0 auto;
-    border-radius: 10px; /* Added rounded corners */
-}
-
-/* If you want to target all images */
-img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px; /* Added rounded corners */
+    border-radius: 10px;
 }
 
 .main-content {
@@ -114,28 +99,24 @@ img {
     width: calc(100% - 250px);
     padding: 20px;
     box-sizing: border-box;
-    background-color: #0F0E0E; /* Set your desired background color */
-    background-attachment: fixed; /* This makes the background not scroll */
-    min-height: 100vh; /* Ensures the background covers the full viewport height */
-    overflow-y: auto; /* Allows content to scroll if it exceeds the viewport height */
+    background-color: #0F0E0E;
+    background-attachment: fixed;
+    min-height: 100vh;
+    overflow-y: auto;
 }
 
-/* Updated styles for the main content title */
 .main-content h1 {
-    color: white;
-    margin-top: 0; /* Keeps the title aligned properly */
+    color: #18F3BE;
     font-family: 'IBM Plex Mono', monospace;
     font-weight: 600;
     font-size: 24px;
     margin-top: 80px;
-    margin-left: 5%; /* Align with the waterfall gallery */
-    padding-left: 15px; /* Match the padding of waterfall-item */
-    color: #18F3BE;
+    margin-left: 5%;
+    padding-left: 15px;
 }
 
-/* Adjust your existing waterfall-gallery styles */
 .waterfall-gallery {
-    column-count: 3; /* Changed from 3 to 4 */
+    column-count: 3;
     column-gap: 40px;
     padding: 15px;
     width: 90%;
@@ -152,12 +133,43 @@ img {
 .waterfall-item figure {
     margin: 0;
     padding: 0;
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px; /* Added this line */
 }
 
 .waterfall-item img {
-    width: 90%;
+    width: 100%;
     height: auto;
     display: block;
+    transition: transform 0.3s ease;
+    border-radius: 10px; /* Added this line */
+}
+
+.waterfall-item figure:hover img {
+    transform: scale(1.1);
+}
+
+.waterfall-item .work-title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    font-family: 'IBM Plex Mono', monospace;
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.waterfall-item figure:hover .work-title {
+    opacity: 1;
 }
 
 .waterfall-item .description {
@@ -166,21 +178,9 @@ img {
     text-align: left;
     color: rgb(151, 150, 150);
     font-size: 12px;
-    /*padding: 2px;*/
     font-family: 'IBM Plex Mono', monospace;
     font-weight: 200;
 }
-
-.waterfall-item figure:hover img,
-.waterfall-item figure:hover figcaption {
-    transform: none;
-}
-
-.waterfall-item figure:hover figcaption {
-    transform: none;
-}
-
-
 
 @media (max-width: 1024px) {
     .waterfall-gallery {
