--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ body, html {
     padding: 0;
     position: relative;
     overflow: hidden;
+    align-items: center;
     border-radius: 10px;
 }
 
@@ -340,3 +341,119 @@ body, html {
 .popup-info {
     flex: 1;
 }
+
+.bio-text {
+    font-family: 'IBM Plex Mono', monospace;
+    line-height: 1.8;
+    color: #ffffff;
+    max-width: 900px;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: justify;
+    font-size: 12px;
+    margin-left: 50px;
+}
+
+.social-icons {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 15px; /* Adjust the space between icons as needed */
+margin-left: 4px;
+margin-bottom: 10px;
+}
+
+.social-icons li {
+    display: inline-block;
+}
+
+.social-icon {
+    width: 22px;
+   
+}
+
+body, h1, h2, h3, p, ul, li {
+    font-family: 'IBM Plex Mono', monospace;
+    color: #ffffff;
+    align-items: left;
+    
+}
+
+.publications h3 {
+    font-weight: 500; /* Make publication titles bold */
+    font-size: 12px;
+    margin-left: 30px;
+}
+
+.publications p {
+    font-size: 12px;
+    font-weight: 400; /* Keep publication details in regular weight */
+    color: #555;
+    margin-left: 30px;
+}
+
+.about-me-text {
+    font-size: 12px; /* Adjust this value as needed */
+}
+
+.left-align {
+    text-align: left;
+}
+
+.bio-section {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.bio-title {
+    color: #ffffff;
+    font-family: 'IBM Plex Mono', monospace;
+    font-weight: 800;
+    font-size: 24px;
+    margin-top: 80px;
+    padding-left: 15px;
+    margin-left: 50px;
+    font-size: 15px;
+}
+
+.greeting-bio {
+    display: flex;
+    align-items: flex-start;
+    margin-left: 50px;
+}
+
+.greeting-image {
+    flex: 0 0 auto;
+    margin-right: 20px;
+    width: 80%;
+    margin-top: 50px;
+    margin-left: 50px;
+   
+}
+
+.bio-section {
+    flex: 1 1 auto;
+}
+
+.publications ul,
+.publications ol {
+    list-style-type: none !important;
+    padding-left: 0 !important;
+    margin-left: 30px;
+}
+
+.publications li {
+    list-style-type: none !important;
+    margin-bottom: 24px;
+}
+
+.publications li::before {
+    content: none !important;
+}
+
+/* If you want to keep the h3 styling */
+.publications h3 {
+    margin-bottom: 5px; /* Adjust as needed */
+}
+
