--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body, html {
     text-align: left;
     font-size: 12px;
     color: #ccc;
+    margin-left: 14px;
 }
 
 .content-image, img {
@@ -289,18 +290,21 @@ body, html {
 
 .popup-main-image {
     flex: 0 0 50%;
-    margin-right: 20px;
-    margin: 20px;
+    margin: 20px 20px 20px 0; /* Adjusted margin */    
+    overflow: hidden;
+    position: relative; /* Add this line */
+    left: -60px; /* Add this line to move the container left */
 }
 
 .popup-main-image img {
-    width: 100%;
+    width: 140%;
     height: auto;
     display: block;
 }
 
 .popup-info {
     flex: 1;
+    padding-left: 0;
 }
 
 #popup-text {
@@ -309,12 +313,13 @@ body, html {
 
 #popup-text section {
     margin-bottom: 10px;
-    font-size: 12px;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 #popup-text h3 {
-    font-size: 12px;
-    margin-bottom: 5px;
+    font-size: 14px;
+    margin-bottom: 10px;
     font-weight: 600;
 }
 
@@ -361,24 +366,7 @@ body, html {
     color: inherit;
 }
 
-.popup-header {
-    display: flex;
-    margin-bottom: 20px;
-}
 
-.popup-main-image {
-    flex: 0 0 50%;
-    margin-right: 20px;
-}
-
-.popup-main-image img {
-    width: 100%;
-    height: auto;
-}
-
-.popup-info {
-    flex: 1;
-}
 
 .bio-text {
     font-family: 'IBM Plex Mono', monospace;
@@ -398,7 +386,7 @@ body, html {
     margin-top: 10px;
     display: flex;
     gap: 18px; /* Adjust the space between icons as needed */
-    margin-left: 4px;
+    margin-left: 20px;
     margin-bottom: 20px;
 }
 
@@ -541,7 +529,7 @@ body, h1, h2, h3, p, ul, li {
 .popup-header {
     display: flex;
     flex-direction: row;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding-left: 40px;;
     padding-right: 40px;;
 }
@@ -549,7 +537,7 @@ body, h1, h2, h3, p, ul, li {
 .popup-header.photography{
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .popup-header.photography img{
@@ -566,6 +554,20 @@ body, h1, h2, h3, p, ul, li {
     width: 100%;
     height: auto;
     display: block;
+}
+
+.popup-info {
+    flex: 1;
+}
+
+.popup-main-image {
+    flex: 0 0 50%;
+    margin-right: -20px;
+}
+
+.popup-main-image img {
+    width: 100%;
+    height: auto;
 }
 
 .popup-info {
@@ -632,22 +634,10 @@ body, h1, h2, h3, p, ul, li {
 
 .popup-header {
     display: flex;
-    margin-bottom: 20px;
+    margin-bottom: -10px;
 }
 
-.popup-main-image {
-    flex: 0 0 50%;
-    margin-right: 20px;
-}
 
-.popup-main-image img {
-    width: 100%;
-    height: auto;
-}
-
-.popup-info {
-    flex: 1;
-}
 
 .bio-text {
     font-family: 'IBM Plex Mono', monospace;
@@ -964,6 +954,7 @@ body, h1, h2, h3, p, ul, li {
         width: 100%;
     }
 }
+
 
 
 
